--- a/BO-GTData/BoTorch_feasibility_aware_v2.ipynb
+++ b/BO-GTData/BoTorch_feasibility_aware_v2.ipynb
@@ -80,8 +80,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = r'../data/olhs_run1.xlsx'\n",
-    "x_pd = pd.read_excel(filename, sheet_name='Initial Design (OLHS)', header=[0,1], index_col=[0])\n",
+    "filename = r'../data/olhs_combine.xlsx'\n",
+    "x_pd = pd.read_excel(filename, sheet_name='Design', header=[0,1], index_col=[0])\n",
     "y_pd = pd.read_excel(filename, sheet_name='bo_data', header=[0,1], index_col=[0])\n",
     "\n",
     "dtype=torch.double\n",
