--- a/Sensitivity_analysis/gsa_sobol.ipynb
+++ b/Sensitivity_analysis/gsa_sobol.ipynb
@@ -17,9 +17,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\goura\\anaconda3\\envs\\botorch\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import numpy as np\n",
@@ -41,8 +50,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = r'../data/olhs_run1.xlsx'\n",
-    "x_pd = pd.read_excel(filename, sheet_name='Initial Design (OLHS)', header=[0,1], index_col=[0])\n",
+    "# filename = r'../data/olhs_run1.xlsx'\n",
+    "# x_pd = pd.read_excel(filename, sheet_name='Initial Design (OLHS)', header=[0,1], index_col=[0])\n",
+    "# y_pd = pd.read_excel(filename, sheet_name='bo_data', header=[0,1], index_col=[0])\n",
+    "\n",
+    "filename = r'../data/olhs_combine.xlsx'\n",
+    "x_pd = pd.read_excel(filename, sheet_name='Design', header=[0,1], index_col=[0])\n",
     "y_pd = pd.read_excel(filename, sheet_name='bo_data', header=[0,1], index_col=[0])\n",
     "\n",
     "dtype=torch.double\n",
@@ -62,6 +75,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# identify non-feasible designs\n",
+    "mfg = y_pd['Manufacturability'].values\n",
+    "feas_bool = mfg==1\n",
+    "x = x[feas_bool.flatten(), :] \n",
+    "y = y[feas_bool.flatten(), :]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -70,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +176,7 @@
        ")"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,14 +269,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\goura\\AppData\\Local\\Temp\\ipykernel_22848\\2170332043.py:13: DeprecationWarning: `salib.sample.saltelli` will be removed in SALib 1.5.1 Please use `salib.sample.sobol`\n",
+      "C:\\Users\\goura\\AppData\\Local\\Temp\\ipykernel_7180\\2170332043.py:13: DeprecationWarning: `salib.sample.saltelli` will be removed in SALib 1.5.1 Please use `salib.sample.sobol`\n",
       "  param_values = saltelli.sample(problem, 1024)\n"
      ]
     }
@@ -274,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -324,43 +350,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>x1</th>\n",
-       "      <td>0.074288</td>\n",
-       "      <td>0.010300</td>\n",
+       "      <td>0.140071</td>\n",
+       "      <td>0.029579</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x2</th>\n",
-       "      <td>0.036671</td>\n",
-       "      <td>0.006598</td>\n",
+       "      <td>0.014524</td>\n",
+       "      <td>0.002825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x3</th>\n",
-       "      <td>0.133297</td>\n",
-       "      <td>0.016547</td>\n",
+       "      <td>0.083381</td>\n",
+       "      <td>0.016121</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x4</th>\n",
-       "      <td>0.164148</td>\n",
-       "      <td>0.023795</td>\n",
+       "      <td>0.458839</td>\n",
+       "      <td>0.075189</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x5</th>\n",
-       "      <td>0.053961</td>\n",
-       "      <td>0.008447</td>\n",
+       "      <td>0.042967</td>\n",
+       "      <td>0.008421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x6</th>\n",
-       "      <td>0.056381</td>\n",
-       "      <td>0.008054</td>\n",
+       "      <td>0.148549</td>\n",
+       "      <td>0.050671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x7</th>\n",
-       "      <td>0.469286</td>\n",
-       "      <td>0.056985</td>\n",
+       "      <td>0.608545</td>\n",
+       "      <td>0.107889</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x8</th>\n",
-       "      <td>0.298067</td>\n",
-       "      <td>0.038820</td>\n",
+       "      <td>0.050555</td>\n",
+       "      <td>0.009881</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -368,17 +394,17 @@
       ],
       "text/plain": [
        "          ST   ST_conf\n",
-       "x1  0.074288  0.010300\n",
-       "x2  0.036671  0.006598\n",
-       "x3  0.133297  0.016547\n",
-       "x4  0.164148  0.023795\n",
-       "x5  0.053961  0.008447\n",
-       "x6  0.056381  0.008054\n",
-       "x7  0.469286  0.056985\n",
-       "x8  0.298067  0.038820"
+       "x1  0.140071  0.029579\n",
+       "x2  0.014524  0.002825\n",
+       "x3  0.083381  0.016121\n",
+       "x4  0.458839  0.075189\n",
+       "x5  0.042967  0.008421\n",
+       "x6  0.148549  0.050671\n",
+       "x7  0.608545  0.107889\n",
+       "x8  0.050555  0.009881"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -430,43 +456,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>x1</th>\n",
-       "      <td>0.079919</td>\n",
-       "      <td>0.014773</td>\n",
+       "      <td>0.182578</td>\n",
+       "      <td>0.041763</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x2</th>\n",
-       "      <td>0.139694</td>\n",
-       "      <td>0.042752</td>\n",
+       "      <td>0.227299</td>\n",
+       "      <td>0.048482</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x3</th>\n",
-       "      <td>0.087224</td>\n",
-       "      <td>0.016568</td>\n",
+       "      <td>0.114641</td>\n",
+       "      <td>0.022435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x4</th>\n",
-       "      <td>0.104312</td>\n",
-       "      <td>0.018602</td>\n",
+       "      <td>0.129652</td>\n",
+       "      <td>0.028269</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x5</th>\n",
-       "      <td>0.221498</td>\n",
-       "      <td>0.038775</td>\n",
+       "      <td>0.420254</td>\n",
+       "      <td>0.085975</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x6</th>\n",
-       "      <td>0.259490</td>\n",
-       "      <td>0.054228</td>\n",
+       "      <td>0.440085</td>\n",
+       "      <td>0.088455</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x7</th>\n",
-       "      <td>0.478685</td>\n",
-       "      <td>0.068486</td>\n",
+       "      <td>0.292512</td>\n",
+       "      <td>0.051999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x8</th>\n",
-       "      <td>0.232420</td>\n",
-       "      <td>0.042334</td>\n",
+       "      <td>0.158065</td>\n",
+       "      <td>0.030287</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -474,17 +500,17 @@
       ],
       "text/plain": [
        "          ST   ST_conf\n",
-       "x1  0.079919  0.014773\n",
-       "x2  0.139694  0.042752\n",
-       "x3  0.087224  0.016568\n",
-       "x4  0.104312  0.018602\n",
-       "x5  0.221498  0.038775\n",
-       "x6  0.259490  0.054228\n",
-       "x7  0.478685  0.068486\n",
-       "x8  0.232420  0.042334"
+       "x1  0.182578  0.041763\n",
+       "x2  0.227299  0.048482\n",
+       "x3  0.114641  0.022435\n",
+       "x4  0.129652  0.028269\n",
+       "x5  0.420254  0.085975\n",
+       "x6  0.440085  0.088455\n",
+       "x7  0.292512  0.051999\n",
+       "x8  0.158065  0.030287"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -536,43 +562,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>x1</th>\n",
-       "      <td>0.064525</td>\n",
-       "      <td>0.019380</td>\n",
+       "      <td>0.176473</td>\n",
+       "      <td>0.087232</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x2</th>\n",
-       "      <td>0.061580</td>\n",
-       "      <td>0.014571</td>\n",
+       "      <td>0.149236</td>\n",
+       "      <td>0.044381</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x3</th>\n",
-       "      <td>0.045992</td>\n",
-       "      <td>0.014260</td>\n",
+       "      <td>0.399307</td>\n",
+       "      <td>0.077195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x4</th>\n",
-       "      <td>0.221073</td>\n",
-       "      <td>0.055426</td>\n",
+       "      <td>0.170177</td>\n",
+       "      <td>0.038076</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x5</th>\n",
-       "      <td>0.320151</td>\n",
-       "      <td>0.068245</td>\n",
+       "      <td>0.185854</td>\n",
+       "      <td>0.048283</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x6</th>\n",
-       "      <td>0.440472</td>\n",
-       "      <td>0.112106</td>\n",
+       "      <td>0.261245</td>\n",
+       "      <td>0.061951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x7</th>\n",
-       "      <td>0.241582</td>\n",
-       "      <td>0.049610</td>\n",
+       "      <td>0.159189</td>\n",
+       "      <td>0.043260</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>x8</th>\n",
-       "      <td>0.091757</td>\n",
-       "      <td>0.018860</td>\n",
+       "      <td>0.097557</td>\n",
+       "      <td>0.024698</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -580,17 +606,17 @@
       ],
       "text/plain": [
        "          ST   ST_conf\n",
-       "x1  0.064525  0.019380\n",
-       "x2  0.061580  0.014571\n",
-       "x3  0.045992  0.014260\n",
-       "x4  0.221073  0.055426\n",
-       "x5  0.320151  0.068245\n",
-       "x6  0.440472  0.112106\n",
-       "x7  0.241582  0.049610\n",
-       "x8  0.091757  0.018860"
+       "x1  0.176473  0.087232\n",
+       "x2  0.149236  0.044381\n",
+       "x3  0.399307  0.077195\n",
+       "x4  0.170177  0.038076\n",
+       "x5  0.185854  0.048283\n",
+       "x6  0.261245  0.061951\n",
+       "x7  0.159189  0.043260\n",
+       "x8  0.097557  0.024698"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
