--- a/gp-separate-models/predict_singleTask_botorch.ipynb
+++ b/gp-separate-models/predict_singleTask_botorch.ipynb
@@ -11,9 +11,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\goura\\anaconda3\\envs\\botorch\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "import pandas as pd\n",
@@ -38,12 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename = r'../data/olhs_run1.xlsx'\n",
-    "x_pd = pd.read_excel(filename, sheet_name='Initial Design (OLHS)', header=[0,1], index_col=[0])\n",
+    "# filename = r'../data/olhs_run1.xlsx'\n",
+    "# x_pd = pd.read_excel(filename, sheet_name='Initial Design (OLHS)', header=[0,1], index_col=[0])\n",
+    "# y_pd = pd.read_excel(filename, sheet_name='bo_data', header=[0,1], index_col=[0])\n",
+    "\n",
+    "filename = r'../data/olhs_combine.xlsx'\n",
+    "x_pd = pd.read_excel(filename, sheet_name='Design', header=[0,1], index_col=[0])\n",
     "y_pd = pd.read_excel(filename, sheet_name='bo_data', header=[0,1], index_col=[0])\n",
     "\n",
     "dtype=torch.double\n",
@@ -60,6 +73,19 @@
     "x_bounds = torch.tensor(x_bounds.T, dtype=dtype)\n",
     "\n",
     "x = normalize(x, bounds=x_bounds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# identify non-feasible designs\n",
+    "mfg = y_pd['Manufacturability'].values\n",
+    "feas_bool = mfg==1\n",
+    "x = x[feas_bool.flatten(), :] \n",
+    "y = y[feas_bool.flatten(), :]"
    ]
   },
   {
@@ -197,35 +223,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 53.00246722,   4.35071356,   5.15995448],\n",
-       "       [ 23.53115145,  54.32689024,   1.01915692],\n",
-       "       [ 38.31266737,   6.42855681,   1.51647077],\n",
-       "       [ 31.93683001,   5.78426479,   1.47864241],\n",
-       "       [120.81275227,   3.37494517,   2.31641308],\n",
-       "       [ 81.02350236,  83.17400977,   1.572384  ],\n",
-       "       [ 84.50237557,   3.59454019,   2.75046739],\n",
-       "       [ 65.46177514,  28.03651889,   3.49168077],\n",
-       "       [ 49.54375338, 107.89386945,   5.26147671],\n",
-       "       [167.9698561 ,   4.92550691,   9.90881745],\n",
-       "       [ 49.51464234, 113.75999104,   0.77186341],\n",
-       "       [102.16824126,  18.29338578,   2.354845  ],\n",
-       "       [ 81.01996371,  10.28731079,   9.33248047],\n",
-       "       [ 65.0121376 , 105.94698764,  39.1051807 ],\n",
-       "       [ 37.53899309,  44.14154279,   1.32579402],\n",
-       "       [117.94756785,   4.54630024,   9.54407469],\n",
-       "       [148.22525483,  17.07074285,  27.80404566],\n",
-       "       [ 78.94396436,  29.1471953 ,  15.00183881],\n",
-       "       [114.11313832,   3.8052422 ,   0.52652262],\n",
-       "       [ 58.51376507,   4.89495022,   0.6236652 ]])"
+       "array([[ 56.10496009,   3.24610112,   5.5198796 ],\n",
+       "       [126.11315478,   2.00110453,   3.06972483],\n",
+       "       [ 89.07224712,  82.12147604,   2.59843202],\n",
+       "       [ 90.48586344,   2.4459302 ,   3.42440474],\n",
+       "       [ 70.47881577,  27.19890575,   4.30126503],\n",
+       "       [ 54.01477017, 107.30254325,   5.71135151],\n",
+       "       [175.47247996,   3.70804811,  10.4510598 ],\n",
+       "       [ 54.41084275, 112.99359715,   1.43308026],\n",
+       "       [105.90415975,  17.45735581,   3.15065057],\n",
+       "       [ 84.09295017,   9.13536078,  10.48400266],\n",
+       "       [ 70.15013402, 105.39383182,  39.05848337],\n",
+       "       [122.07406389,   3.74780252,  10.04942056],\n",
+       "       [151.87617538,  16.59687476,  28.16230374],\n",
+       "       [118.56163594,   2.69750335,   1.51071614],\n",
+       "       [ 65.98006359,  28.63037367,   1.46110433],\n",
+       "       [208.67122424,   4.84352161,   3.93414821],\n",
+       "       [ 87.02440513,  13.95910724,   3.26304539],\n",
+       "       [152.14714844,   4.94195292,   8.3509711 ],\n",
+       "       [ 73.59653812,   4.07117313,   2.76967747],\n",
+       "       [ 55.26020086,  60.02778961,   4.46565444],\n",
+       "       [118.41046844,  41.6593669 ,   5.9523585 ],\n",
+       "       [130.49533899,  41.7422937 ,  58.03655785],\n",
+       "       [727.23048485,  25.3465382 ,   2.16957087],\n",
+       "       [143.30193796,   6.19999415,  84.60629221],\n",
+       "       [235.9856816 ,   2.90385356,   1.25389457],\n",
+       "       [377.59977861,   5.94206134,  10.75613805],\n",
+       "       [124.1905073 ,   4.24595836,  23.82983777],\n",
+       "       [181.46444018,   3.42384679,   3.1345062 ],\n",
+       "       [268.92219831,   3.27601499,   2.2522965 ],\n",
+       "       [318.25158691,   8.42122592,  10.37218723],\n",
+       "       [115.42165749,   5.09852789,  57.26486107],\n",
+       "       [615.14761588,   2.69992085,  19.71340271]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,16 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "tensor([[5.1345e+01, 1.2518e+00, 4.9655e+00],\n",
-       "        [2.0121e+01, 5.6635e+01, 5.3680e-01],\n",
-       "        [3.5672e+01, 3.4659e+00, 1.0362e+00],\n",
-       "        [2.9114e+01, 2.5689e+00, 9.9880e-01],\n",
        "        [1.2342e+02, 1.4074e-01, 1.8993e+00],\n",
        "        [8.1197e+01, 8.8701e+01, 1.0780e+00],\n",
        "        [8.4919e+01, 3.0367e-01, 2.3437e+00],\n",
@@ -256,15 +291,30 @@
        "        [1.0337e+02, 1.6751e+01, 1.8458e+00],\n",
        "        [8.0966e+01, 7.8526e+00, 9.4608e+00],\n",
        "        [6.3910e+01, 1.1401e+02, 4.1828e+01],\n",
-       "        [3.5088e+01, 4.5478e+01, 8.8096e-01],\n",
        "        [1.2022e+02, 1.4751e+00, 9.7007e+00],\n",
        "        [1.5244e+02, 1.5300e+01, 2.9505e+01],\n",
-       "        [7.9096e+01, 2.9050e+01, 1.5752e+01],\n",
        "        [1.1632e+02, 4.7714e-01, 3.0895e-02],\n",
-       "        [5.7751e+01, 1.6560e+00, 1.8070e-01]], dtype=torch.float64)"
+       "        [6.1436e+01, 2.9155e+01, 1.9000e-01],\n",
+       "        [2.1200e+02, 2.9770e+00, 2.9800e+00],\n",
+       "        [8.4074e+01, 1.2344e+01, 2.3600e+00],\n",
+       "        [1.5206e+02, 2.9740e+00, 7.9200e+00],\n",
+       "        [7.0780e+01, 1.9693e+00, 1.7900e+00],\n",
+       "        [5.0765e+01, 6.3048e+01, 3.3800e+00],\n",
+       "        [1.1700e+02, 4.3944e+01, 5.2600e+00],\n",
+       "        [1.2871e+02, 4.3617e+01, 6.2700e+01],\n",
+       "        [7.5335e+02, 2.5528e+01, 1.0200e+00],\n",
+       "        [1.4286e+02, 4.4030e+00, 9.2100e+01],\n",
+       "        [2.4191e+02, 9.4903e-01, 1.7000e-01],\n",
+       "        [3.8811e+02, 2.9410e+00, 1.0500e+01],\n",
+       "        [1.2278e+02, 2.0965e+00, 2.4900e+01],\n",
+       "        [1.8191e+02, 1.1874e+00, 2.1000e+00],\n",
+       "        [2.7392e+02, 5.4938e-01, 1.0000e+00],\n",
+       "        [3.2532e+02, 7.4095e+00, 1.0090e+01],\n",
+       "        [1.1385e+02, 3.1232e+00, 6.2070e+01],\n",
+       "        [6.3481e+02, 3.3501e-01, 2.0500e+01]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,35 +325,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 3.22861474e-02,  2.47556603e+00,  3.91611081e-02],\n",
-       "       [ 1.69468352e-01, -4.07608979e-02,  8.98578474e-01],\n",
-       "       [ 7.40143677e-02,  8.54801584e-01,  4.63492349e-01],\n",
-       "       [ 9.69456345e-02,  1.25165043e+00,  4.80418911e-01],\n",
-       "       [-2.11069304e-02,  2.29799998e+01,  2.19636583e-01],\n",
-       "       [-2.13160257e-03, -6.23103486e-02,  4.58612241e-01],\n",
-       "       [-4.91168074e-03,  1.08369947e+01,  1.73582824e-01],\n",
-       "       [ 1.29348364e-02,  8.21773907e-03,  6.98567487e-02],\n",
-       "       [ 3.38129871e-02, -7.03612834e-02,  3.40891684e-02],\n",
-       "       [-3.29735427e-02,  1.39230022e+00, -2.72598582e-02],\n",
-       "       [ 3.36181589e-02, -7.31628561e-02,  1.70829266e+00],\n",
-       "       [-1.16333182e-02,  9.20772357e-02,  2.75760687e-01],\n",
-       "       [ 6.67621916e-04,  3.10051549e-01, -1.35612004e-02],\n",
-       "       [ 1.72487413e-02, -7.07219749e-02, -6.50889076e-02],\n",
-       "       [ 6.98613030e-02, -2.93868951e-02,  5.04950898e-01],\n",
-       "       [-1.88906856e-02,  2.08202850e+00, -1.61417172e-02],\n",
-       "       [-2.76423283e-02,  1.15734827e-01, -5.76592795e-02],\n",
-       "       [-1.92273630e-03,  3.34579335e-03, -4.76050961e-02],\n",
-       "       [-1.89676467e-02,  6.97510626e+00,  1.60424902e+01],\n",
-       "       [ 1.32120372e-02,  1.95588781e+00,  2.45138460e+00]])"
+       "array([[ 9.27108894e-02,  1.59314676e+00,  1.11646279e-01],\n",
+       "       [ 2.18399208e-02,  1.32184492e+01,  6.16269888e-01],\n",
+       "       [ 9.69950435e-02, -7.41764350e-02,  1.41041931e+00],\n",
+       "       [ 6.55490470e-02,  7.05456646e+00,  4.61141696e-01],\n",
+       "       [ 9.05669388e-02, -2.19035619e-02,  3.17914700e-01],\n",
+       "       [ 1.27108204e-01, -7.54562877e-02,  1.22507436e-01],\n",
+       "       [ 1.02201346e-02,  8.00985046e-01,  2.59716091e-02],\n",
+       "       [ 1.35826342e-01, -7.94068995e-02,  4.02835180e+00],\n",
+       "       [ 2.45076324e-02,  4.21679784e-02,  7.06896262e-01],\n",
+       "       [ 3.86217003e-02,  1.63354912e-01,  1.08154154e-01],\n",
+       "       [ 9.76432735e-02, -7.55737934e-02, -6.62053288e-02],\n",
+       "       [ 1.54342587e-02,  1.54071081e+00,  3.59522507e-02],\n",
+       "       [-3.69228953e-03,  8.47630562e-02, -4.55171194e-02],\n",
+       "       [ 1.92761538e-02,  4.65348398e+00,  4.78988772e+01],\n",
+       "       [ 7.39646495e-02, -1.79943862e-02,  6.69002281e+00],\n",
+       "       [-1.57017725e-02,  6.26980723e-01,  3.20183964e-01],\n",
+       "       [ 3.50883572e-02,  1.30868965e-01,  3.82646352e-01],\n",
+       "       [ 5.91246784e-04,  6.61719207e-01,  5.44155429e-02],\n",
+       "       [ 3.97869873e-02,  1.06731993e+00,  5.47305848e-01],\n",
+       "       [ 8.85502581e-02, -4.79033496e-02,  3.21199538e-01],\n",
+       "       [ 1.20261619e-02, -5.19896482e-02,  1.31627091e-01],\n",
+       "       [ 1.38484030e-02, -4.29920628e-02, -7.43770679e-02],\n",
+       "       [-3.46688675e-02, -7.10834370e-03,  1.12703027e+00],\n",
+       "       [ 3.11356571e-03,  4.08129491e-01, -8.13649054e-02],\n",
+       "       [-2.45083857e-02,  2.05981218e+00,  6.37585044e+00],\n",
+       "       [-2.70803392e-02,  1.02042208e+00,  2.43940998e-02],\n",
+       "       [ 1.14793124e-02,  1.02526037e+00, -4.29784027e-02],\n",
+       "       [-2.45819044e-03,  1.88348223e+00,  4.92621998e-01],\n",
+       "       [-1.82497829e-02,  4.96311295e+00,  1.25229650e+00],\n",
+       "       [-2.17332487e-02,  1.36544425e-01,  2.79670199e-02],\n",
+       "       [ 1.37698678e-02,  6.32469227e-01, -7.74148369e-02],\n",
+       "       [-3.09771427e-02,  7.05922465e+00, -3.83705994e-02]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,16 +437,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[57.7508,  1.6560,  0.1807]], dtype=torch.float64)"
+       "tensor([[6.3481e+02, 3.3501e-01, 2.0500e+01]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,16 +457,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[72.06366808, 35.77005456,  6.03539222]])"
+       "array([[156.55797765,  26.49370475,  11.924981  ]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,20 +555,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.990855508954811,\n",
-       " 0.9915914862653695,\n",
-       " 0.9923678667135248,\n",
-       " 0.990717450370424,\n",
-       " 0.9921654177640774]"
+       "[0.9934301058189429,\n",
+       " 0.9922793613048736,\n",
+       " 0.9908463370033634,\n",
+       " 0.9888278052481584,\n",
+       " 0.991679506369814]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,20 +579,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-3.0521168187314984,\n",
-       " -0.5025046953213275,\n",
-       " -110.60677035530715,\n",
-       " -2.2893570715728666,\n",
-       " -64.03711473371024]"
+       "[-0.22439190093787512,\n",
+       " -0.6642662524240138,\n",
+       " -102.07596783666071,\n",
+       " -3.432268444254859,\n",
+       " -0.640603988617683]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,11 +609,11 @@
     {
      "data": {
       "text/plain": [
-       "[0.8121040003761978,\n",
-       " 0.5944335005930971,\n",
-       " 0.8562126097321912,\n",
-       " 0.6994171282884963,\n",
-       " 0.8877286478376928]"
+       "[0.6669464926895264,\n",
+       " 0.8693740261663457,\n",
+       " 0.6095830806810407,\n",
+       " 0.8386902019377457,\n",
+       " 0.8845588431754384]"
       ]
      },
      "execution_count": 8,
@@ -561,6 +623,31 @@
    ],
    "source": [
     "all_r2_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average R2 score 5-fold cross validation =  0.7738305289300195\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_r2_list = np.array(all_r2_list)\n",
+    "print(\"Average R2 score 5-fold cross validation = \", all_r2_list.mean())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Average R2 Score higher than gpytorch ExactGP model"
    ]
   },
   {
