--- a/gp-separate-models/predict_singleTask_botorch.ipynb
+++ b/gp-separate-models/predict_singleTask_botorch.ipynb
@@ -211,6 +211,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.eval()\n",
+    "posterior = model.posterior(x)\n",
+    "\n",
+    "samples = posterior.sample(torch.Size((256,)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
