--- a/BO-GTData/BoTorch_feasibility_aware_v1.ipynb
+++ b/BO-GTData/BoTorch_feasibility_aware_v1.ipynb
@@ -23,7 +23,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/gouravkumbhojkar/miniconda3/envs/botorch/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "c:\\Users\\goura\\anaconda3\\envs\\botorch\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -100,6 +100,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# identify non-feasible designs\n",
+    "feas_bool = mfg==1\n",
+    "x_reg = x[feas_bool.flatten(), :] \n",
+    "y_reg = y[feas_bool.flatten(), :]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -115,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Regression model\n",
     "models = []\n",
     "for i in range(len(objective_properties)):\n",
-    "    models.append(SingleTaskGP(x, y[:, i].unsqueeze(-1), \n",
+    "    models.append(SingleTaskGP(x_reg, y_reg[:, i].unsqueeze(-1), \n",
     "                               outcome_transform=Standardize(m=1)))\n",
     "\n",
     "# transformation of mfg labels\n",
@@ -132,7 +144,6 @@
     "                         outcome_transform=Standardize(m=2))\n",
     "\n",
     "models.append(cls_model)\n",
-    "# mll_cls = ExactMarginalLogLikelihood(cls_model.likelihood, cls_model)\n",
     "\n",
     "model = ModelListGP(*models)\n",
     "mll = SumMarginalLogLikelihood(model.likelihood, model)\n",
@@ -148,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +239,7 @@
        ")"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,56 +258,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[6.0338e+01, 3.4804e+00, 5.7093e+00, 1.3639e+01, 5.2273e-01],\n",
-       "        [3.6136e+01, 5.2524e+01, 2.3242e+00, 1.1603e+00, 1.3002e+01],\n",
-       "        [4.6839e+01, 5.4779e+00, 2.7008e+00, 1.2017e+00, 1.2960e+01],\n",
-       "        [4.1833e+01, 4.7513e+00, 2.5480e+00, 1.0066e+00, 1.3155e+01],\n",
-       "        [1.2645e+02, 2.3166e+00, 3.2931e+00, 1.3694e+01, 4.6791e-01],\n",
-       "        [9.1096e+01, 8.0907e+01, 2.8848e+00, 1.3672e+01, 4.9006e-01],\n",
-       "        [9.4297e+01, 2.7102e+00, 3.7552e+00, 1.3590e+01, 5.7191e-01],\n",
-       "        [7.5021e+01, 2.6904e+01, 4.7946e+00, 1.3638e+01, 5.2376e-01],\n",
-       "        [5.7483e+01, 1.0567e+02, 5.8902e+00, 1.3650e+01, 5.1176e-01],\n",
-       "        [1.7562e+02, 3.9078e+00, 1.0532e+01, 1.3692e+01, 4.6987e-01],\n",
-       "        [5.7746e+01, 1.1100e+02, 1.6696e+00, 1.3527e+01, 6.3490e-01],\n",
-       "        [1.0777e+02, 1.7486e+01, 3.3631e+00, 1.3655e+01, 5.0665e-01],\n",
-       "        [8.7002e+01, 9.2771e+00, 1.0524e+01, 1.3645e+01, 5.1683e-01],\n",
-       "        [7.3058e+01, 1.0360e+02, 3.8432e+01, 1.3589e+01, 5.7306e-01],\n",
-       "        [5.4783e+01, 4.2696e+01, 2.0682e+00, 1.1541e+00, 1.3008e+01],\n",
-       "        [1.2251e+02, 3.9541e+00, 1.0110e+01, 1.3649e+01, 5.1324e-01],\n",
-       "        [1.5140e+02, 1.6565e+01, 2.7813e+01, 1.3701e+01, 4.6078e-01],\n",
-       "        [8.4396e+01, 2.8310e+01, 1.5320e+01, 1.2288e+00, 1.2933e+01],\n",
-       "        [1.2016e+02, 2.9420e+00, 1.8671e+00, 1.3688e+01, 4.7447e-01],\n",
-       "        [6.7001e+01, 3.8374e+00, 1.6663e+00, 1.1018e+00, 1.3060e+01],\n",
-       "        [4.4956e+01, 3.7049e+00, 4.0566e+00, 1.1019e+00, 1.3060e+01],\n",
-       "        [6.9934e+01, 2.8474e+01, 1.6972e+00, 1.3599e+01, 5.6288e-01],\n",
-       "        [2.0493e+02, 5.1203e+00, 4.1353e+00, 1.3671e+01, 4.9085e-01],\n",
-       "        [8.9426e+01, 1.3903e+01, 3.5040e+00, 1.3648e+01, 5.1388e-01],\n",
-       "        [1.5092e+02, 5.2909e+00, 8.5322e+00, 1.3608e+01, 5.5399e-01],\n",
-       "        [7.6421e+01, 4.3417e+00, 3.0353e+00, 1.3566e+01, 5.9608e-01],\n",
-       "        [5.9623e+01, 5.9307e+01, 4.6543e+00, 1.3643e+01, 5.1932e-01],\n",
-       "        [1.1919e+02, 4.1217e+01, 6.1605e+00, 1.3605e+01, 5.5719e-01],\n",
-       "        [1.3033e+02, 4.1219e+01, 5.7022e+01, 1.3636e+01, 5.2557e-01],\n",
-       "        [6.9270e+02, 2.5519e+01, 2.2688e+00, 1.3496e+01, 6.6565e-01],\n",
-       "        [1.4261e+02, 6.5446e+00, 8.2969e+01, 1.3664e+01, 4.9779e-01],\n",
-       "        [2.2938e+02, 3.0318e+00, 1.4345e+00, 1.3612e+01, 5.5006e-01],\n",
-       "        [3.6375e+02, 6.0095e+00, 1.0760e+01, 1.3626e+01, 5.3602e-01],\n",
-       "        [3.3181e+02, 3.4929e+00, 7.4631e+01, 1.0378e+00, 1.3124e+01],\n",
-       "        [1.2417e+02, 4.3596e+00, 2.3508e+01, 1.3576e+01, 5.8583e-01],\n",
-       "        [1.7664e+02, 3.7019e+00, 3.1583e+00, 1.3441e+01, 7.2122e-01],\n",
-       "        [2.6104e+02, 3.4017e+00, 2.4494e+00, 1.3629e+01, 5.3327e-01],\n",
-       "        [3.0758e+02, 8.4537e+00, 1.0384e+01, 1.3592e+01, 5.7003e-01],\n",
-       "        [1.1703e+02, 5.3386e+00, 5.6342e+01, 1.3693e+01, 4.6869e-01],\n",
-       "        [5.8793e+02, 3.0691e+00, 1.9540e+01, 1.3540e+01, 6.2155e-01]],\n",
+       "tensor([[5.6105e+01, 3.2461e+00, 5.5199e+00, 1.3639e+01, 5.2274e-01],\n",
+       "        [2.2391e+02, 2.1208e+01, 1.6374e+01, 1.1603e+00, 1.3002e+01],\n",
+       "        [1.6535e+02, 2.1728e+01, 1.6213e+01, 1.2017e+00, 1.2960e+01],\n",
+       "        [1.8709e+02, 2.4024e+01, 1.3192e+01, 1.0066e+00, 1.3155e+01],\n",
+       "        [1.2611e+02, 2.0011e+00, 3.0697e+00, 1.3694e+01, 4.6791e-01],\n",
+       "        [8.9072e+01, 8.2121e+01, 2.5984e+00, 1.3672e+01, 4.9007e-01],\n",
+       "        [9.0486e+01, 2.4459e+00, 3.4244e+00, 1.3590e+01, 5.7192e-01],\n",
+       "        [7.0479e+01, 2.7199e+01, 4.3013e+00, 1.3638e+01, 5.2377e-01],\n",
+       "        [5.4015e+01, 1.0730e+02, 5.7114e+00, 1.3650e+01, 5.1176e-01],\n",
+       "        [1.7547e+02, 3.7080e+00, 1.0451e+01, 1.3692e+01, 4.6988e-01],\n",
+       "        [5.4411e+01, 1.1299e+02, 1.4331e+00, 1.3527e+01, 6.3491e-01],\n",
+       "        [1.0590e+02, 1.7457e+01, 3.1507e+00, 1.3655e+01, 5.0666e-01],\n",
+       "        [8.4093e+01, 9.1354e+00, 1.0484e+01, 1.3645e+01, 5.1683e-01],\n",
+       "        [7.0150e+01, 1.0539e+02, 3.9058e+01, 1.3589e+01, 5.7307e-01],\n",
+       "        [3.3197e+02, 2.2411e+01, 1.0728e+01, 1.1540e+00, 1.3008e+01],\n",
+       "        [1.2207e+02, 3.7478e+00, 1.0049e+01, 1.3649e+01, 5.1324e-01],\n",
+       "        [1.5188e+02, 1.6597e+01, 2.8162e+01, 1.3701e+01, 4.6078e-01],\n",
+       "        [1.1928e+02, 2.2490e+01, 1.1059e+01, 1.2287e+00, 1.2933e+01],\n",
+       "        [1.1856e+02, 2.6975e+00, 1.5107e+00, 1.3688e+01, 4.7448e-01],\n",
+       "        [1.7985e+02, 2.1383e+01, 1.1343e+01, 1.1018e+00, 1.3060e+01],\n",
+       "        [1.7607e+02, 3.4700e+01, 1.3907e+01, 1.1019e+00, 1.3060e+01],\n",
+       "        [6.5980e+01, 2.8630e+01, 1.4611e+00, 1.3599e+01, 5.6289e-01],\n",
+       "        [2.0867e+02, 4.8435e+00, 3.9341e+00, 1.3671e+01, 4.9086e-01],\n",
+       "        [8.7024e+01, 1.3959e+01, 3.2630e+00, 1.3648e+01, 5.1388e-01],\n",
+       "        [1.5215e+02, 4.9420e+00, 8.3510e+00, 1.3608e+01, 5.5399e-01],\n",
+       "        [7.3597e+01, 4.0712e+00, 2.7697e+00, 1.3566e+01, 5.9608e-01],\n",
+       "        [5.5260e+01, 6.0028e+01, 4.4657e+00, 1.3643e+01, 5.1933e-01],\n",
+       "        [1.1841e+02, 4.1659e+01, 5.9524e+00, 1.3605e+01, 5.5719e-01],\n",
+       "        [1.3050e+02, 4.1742e+01, 5.8037e+01, 1.3636e+01, 5.2558e-01],\n",
+       "        [7.2723e+02, 2.5347e+01, 2.1696e+00, 1.3496e+01, 6.6566e-01],\n",
+       "        [1.4330e+02, 6.2000e+00, 8.4606e+01, 1.3664e+01, 4.9779e-01],\n",
+       "        [2.3599e+02, 2.9039e+00, 1.2539e+00, 1.3612e+01, 5.5007e-01],\n",
+       "        [3.7760e+02, 5.9421e+00, 1.0756e+01, 1.3626e+01, 5.3603e-01],\n",
+       "        [1.7480e+02, 2.3882e+01, 1.2457e+01, 1.0378e+00, 1.3124e+01],\n",
+       "        [1.2419e+02, 4.2460e+00, 2.3830e+01, 1.3576e+01, 5.8584e-01],\n",
+       "        [1.8146e+02, 3.4238e+00, 3.1345e+00, 1.3441e+01, 7.2123e-01],\n",
+       "        [2.6892e+02, 3.2760e+00, 2.2523e+00, 1.3629e+01, 5.3328e-01],\n",
+       "        [3.1825e+02, 8.4212e+00, 1.0372e+01, 1.3592e+01, 5.7003e-01],\n",
+       "        [1.1542e+02, 5.0985e+00, 5.7265e+01, 1.3693e+01, 4.6870e-01],\n",
+       "        [6.1515e+02, 2.6999e+00, 1.9713e+01, 1.3540e+01, 6.2155e-01]],\n",
        "       dtype=torch.float64)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,38 +322,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([9.9998e-01, 4.5079e-05, 6.1726e-05, 3.3730e-05, 9.9999e-01, 9.9997e-01,\n",
-       "        9.9999e-01, 9.9999e-01, 9.9999e-01, 9.9998e-01, 9.9998e-01, 9.9999e-01,\n",
-       "        9.9998e-01, 9.9999e-01, 4.5224e-05, 9.9998e-01, 9.9999e-01, 3.7471e-05,\n",
-       "        9.9999e-01, 5.9146e-05, 5.0092e-05, 9.9998e-01, 9.9998e-01, 9.9999e-01,\n",
-       "        9.9998e-01, 9.9997e-01, 9.9998e-01, 9.9999e-01, 9.9999e-01, 9.9998e-01,\n",
-       "        9.9999e-01, 9.9998e-01, 9.9999e-01, 3.5988e-05, 9.9999e-01, 9.9998e-01,\n",
-       "        9.9998e-01, 9.9999e-01, 9.9999e-01, 9.9996e-01], dtype=torch.float64)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# cls_model.eval()\n",
-    "\n",
-    "# with torch.no_grad():\n",
-    "#     posterior = cls_model.posterior(x)\n",
-    "# samples = posterior.sample(torch.Size((256,))).exp()\n",
-    "# probabilities = (samples / samples.sum(-1, keepdim=True)).mean(0)\n",
-    "# probabilities[:, 0] # 1st col gives probability of manufacturability"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -351,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,11 +371,6 @@
     "    \"\"\"Optimizes the qEHVI acquisition function, and returns a new candidate and observation.\"\"\"\n",
     "    with torch.no_grad():\n",
     "        pred = model.posterior(normalize(train_x, x_bounds)).mean\n",
-    "    \n",
-    "    # partitioning = FastNondominatedPartitioning(\n",
-    "    #     ref_point= ref_point,\n",
-    "    #     Y=pred,\n",
-    "    # )\n",
     "\n",
     "    acq_func = qNoisyExpectedHypervolumeImprovement(\n",
     "        model=model,\n",
@@ -426,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,23 +411,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[4.4049e+03, 6.7979e+01, 2.9767e+01, 1.5000e+04, 9.8777e+01, 3.4605e+00,\n",
-       "         8.6779e+01, 8.7559e+01],\n",
-       "        [4.5762e+03, 4.8585e+01, 2.2482e+01, 1.4433e+04, 9.1648e+01, 7.5514e+01,\n",
-       "         9.2885e+01, 8.5352e+01],\n",
-       "        [4.8585e+03, 4.5736e+01, 2.5860e+01, 1.4606e+04, 9.4307e+01, 8.1446e+01,\n",
-       "         9.1930e+01, 9.1791e+01],\n",
-       "        [3.8224e+03, 6.3609e+01, 1.8460e+01, 1.4202e+04, 8.7815e+01, 7.4481e+01,\n",
-       "         9.4315e+01, 7.7646e+01]], dtype=torch.float64)"
+       "tensor([[4.5400e+03, 6.6770e+01, 2.9999e+01, 1.4463e+04, 9.8290e+01, 8.4361e+00,\n",
+       "         8.7870e+01, 8.7271e+01],\n",
+       "        [4.6462e+03, 5.1599e+01, 2.2852e+01, 1.4436e+04, 9.2162e+01, 6.4709e+01,\n",
+       "         9.3740e+01, 8.5816e+01],\n",
+       "        [4.5897e+03, 6.1354e+01, 2.6945e+01, 1.4385e+04, 9.6520e+01, 3.1376e+01,\n",
+       "         9.0703e+01, 8.6327e+01],\n",
+       "        [5.0443e+03, 0.0000e+00, 2.4051e+01, 1.4235e+04, 8.7934e+01, 7.5644e+01,\n",
+       "         9.2554e+01, 9.2086e+01]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,20 +438,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[148.9710,  22.8098,  13.7619,  11.1271,   3.0349],\n",
-       "        [148.9710,  22.8098,  13.7619,  11.1271,   3.0349],\n",
-       "        [148.9710,  22.8098,  13.7619,  11.1271,   3.0349],\n",
-       "        [148.9710,  22.8098,  13.7619,  11.1271,   3.0349]],\n",
+       "tensor([[170.7780,  24.1824,  13.7389,  11.1271,   3.0349],\n",
+       "        [170.7780,  24.1824,  13.7389,  11.1271,   3.0349],\n",
+       "        [170.7780,  24.1824,  13.7389,  11.1271,   3.0349],\n",
+       "        [170.7780,  24.1824,  13.7389,  11.1271,   3.0349]],\n",
        "       dtype=torch.float64, grad_fn=<CloneBackward0>)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,19 +462,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.1713, 0.8287],\n",
-       "        [0.1863, 0.8137],\n",
-       "        [0.1441, 0.8559],\n",
-       "        [0.1521, 0.8479]], dtype=torch.float64)"
+       "tensor([[0.1588, 0.8412],\n",
+       "        [0.1546, 0.8454],\n",
+       "        [0.1302, 0.8698],\n",
+       "        [0.1497, 0.8503]], dtype=torch.float64)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
